# Pin-Drop

./: .gitignore  README.md  install_plugin.py  pyproject.toml
docs/: architecture.md  cli.md  concepts.md  getting-started.md  nail-library.md  plugin.md  reference-file.md
examples/: mps-ip-rev-c.fixture.json
pin_drop/: __init__.py  cli.py  dut_reader.py  fixture_model.py  generate_footprint.py  generate_symbol.py  kicad_format.py  nail_library.py  reconcile.py  sexpr.py  workflow.py
pin_drop/plugin/: __init__.py  action.py  crossprobe.py  dialog.py  ipc_crossprobe.py
tests/: test_crossprobe.py  test_foundations.py  test_generators.py  test_reconcile.py
